# glue-jupyterlab

./: .eslintignore  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .yarnrc.yml  CHANGELOG.md  LICENSE  README.md  RELEASE.md  conftest.py  install.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build.yml  check-release.yml  update-integration-tests.yml
binder/: environment.yml  postBuild
docs/: environment.yml
docs/source/: conf.py  index.rst
examples/: glue.ipynb  session.glu  session2.glu  session3.glu  w5_psc.csv
glue_jupyterlab/: __init__.py  glue_session.py  glue_utils.py  glue_ydoc.py  handlers.py
glue_jupyterlab/tests/: __init__.py  conftest.py  test_glue_session.py  test_handlers.py  test_ydoc.py
glue_lab/: __init__.py  glue_session.py  glue_utils.py  glue_ydoc.py  handlers.py
glue_lab/tests/: __init__.py  conftest.py  test_glue_session.py  test_handlers.py  test_ydoc.py
glue_lab/tests/assets/: session.glu
gluepyter/: __init__.py  glue_session.py  glue_utils.py  glue_ydoc.py  handlers.py
gluepyter/tests/: __init__.py  conftest.py  test_glue_session.py  test_handlers.py
jupyter-config/nb-config/: glue_jupyterlab.json  glue_lab.json
jupyter-config/server-config/: glue_jupyterlab.json  glue_lab.json
src/: commands.ts  handler.ts  index.ts  token.ts  tools.ts  types.ts  yWidget.ts
src/__tests__/: glue_lab.spec.ts
src/canvas/: glueCanvasWidget.ts
src/common/: tabPanel.ts
src/controlPanel/: commands.ts  model.ts  plugin.ts  subPanelModel.ts  widget.ts
src/controlPanel/data/: dataPanel.ts  dataPanelModel.ts  datasetsWidget.ts  datasetsWidget.tsx  subsetsWidget.ts
src/controlPanel/layers/: canvasControl.ts  layerPanel.ts  layersPanelModel.ts
src/document/: default.json  docModel.ts  modelFactory.ts  plugin.ts  sharedModel.ts  tracker.ts  widgetFactory.ts
src/leftPanel/: model.ts  plugin.ts  widget.ts
src/leftPanel/config/: configPanel.ts  configWidget.ts  configWidgetModel.ts
src/leftPanel/control/: controlPanel.ts
src/leftPanel/data/: dataPanel.ts  datasetsWidget.tsx  subsetsWidget.ts
src/linkPanel/: linkEditor.ts  linkEditorWidget.ts  linkPanel.ts  linkWidget.tsx  model.ts  plugin.ts  types.ts
src/linkPanel/widgets/: advancedAttributeSelect.tsx  advancedLinkingChoices.tsx  advancedLinkinkChoices.tsx  datasetSwitcher.tsx  identityLinks.tsx  linkedDataset.ts  linking.ts  (+5 more)
src/schemas/: dataset.schema.json  glue.schema.json  link.schema.json
src/sessionPanel/: glueDocumentWidget.ts  glueSessionWidget.ts  sessionWidget.tsx
src/viewPanel/: glueDocumentWidget.ts  gridStackItem.ts  sessionWidget.ts  sessionWidget.tsx  tabLayout.ts  tabModel.ts  tabView.ts
style/: base.css
ui-tests/: jupyter_server_test_config.py  package.json  playwright.config.js
ui-tests/tests/: glue_lab.spec.ts  test.spec.ts
(+11 files in other folders)
